--- a/meta/main.yml
+++ b/meta/main.yml
@@ -20,11 +20,11 @@ galaxy_info:
   # the ones that apply to your role. If you don't see your
   # platform on this list, let us know and we'll get it added!
   #
-  #platforms:
-  #  - name: Ubuntu
-  #    versions:
-  #      - trusty
-  #      - xenial
+  platforms:
+    - name: Ubuntu
+      versions:
+        - trusty
+        - xenial
   galaxy_tags:
     - internal
     - ansible
